# CMake-playground

./: CMakeLists.txt
depend/: CMakeLists.txt  mylib.cpp  mylib.h
depend/include/: mylib.h
proj/: CMakeLists.txt  main.cpp
